--- a/blogpost.html
+++ b/blogpost.html
@@ -15,6 +15,9 @@
                 <p>Los blogs son la mejor forma de compartir información y tus ideas. Mucho mas que ir a conferencias o salir en Youtube. Excepto si eres un rockstar. Pero estadísticamente no lo eres.... por ahora.</p>
                 <p>Programación XI-07</p>
             </div>
+            <div id="footer">
+                Hecho para Platzi
+            </div>
         </div>
     </body>
 </html>
